fixed sidebar spacing.

--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,12 @@ form button:hover{
 .material-symbols-outlined{
     margin-left: 10px;
     cursor: pointer;
-    width:20px;
+    width:30px;
 }
+.material-symbols-outlined:hover{
+    transform:scale(1.3);
+}
+
 /*everything table related*/
 table{
     width: 100%;
